<resources>
    <string name="app_name">פיס 777 - סטטיסטיקה</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_numbers_page_title">סטטיסטיקת מספרים</string>
    <string name="search_statistics_queries_page_title">סטטיסטיקה כללית</string>
    <string name="settings_page_title">הגדרות</string>
    <string name="title_place_holder">TitleTitle</string>
    <string name="last_msg_place_holder">blablablabla</string>
    <string name="add_event_address">ADDRESS</string>
    <string name="add_event_type">TYPE</string>
    <string name="add_event_date">DATE</string>
    <string name="option_other">other</string>
    <string name="sign_out">Sign out</string>
    <string name="add_event_choose_date_btn">Choose date</string>
    <string name="add_event_time">Time</string>
    <string name="add_event_choose_time_btn">Choose time</string>
    <string name="add_event_until">Until:</string>
    <string name="add_event_from">From:</string>
    <string name="add_event_pick_location_desc">Pick location</string>
    <string name="event_info_join_button">Join</string>
    <string name="event_info_chat_button">Chat</string>
    <string name="event_info_attending">Attending: </string>
    <string name="map_mapTxt">Map</string>
    <string name="map_satelliteTxt">Satellite</string>
    <string name="map_hybridTxt">Hybrid</string>
    <string name="event_info_host">Host</string>
    <string name="test_event">Test Event</string>
    <string name="title_activity_fire_base_auth">StatisticsPro</string>
    <string name="first_color">first_color</string>
    <string name="second_color">second_color</string>
    <string name="third_color">third_color</string>
    <string name="tolerance">tolerance</string>
    <string name="chosen_number_frag_stat_btn">הרץ סטטיסטיקה</string>
    <string name="chosen_number_frag_ET_start_date">תאריך התחלה</string>
    <string name="chosen_number_frag_ET_end_date">תאריך סיום</string>
    <string name="date_isnt_valid">תאריך לא תקין</string>
    <string name="download_statistics_file">מוריד קובץ סטטיסטיקה</string>
    <string name="please_chose_start_date_first">בבקשה בחר תאריך התחלה קודם</string>
    <string name="appearance_number">מספר הופעות:</string>
    <string name="chosen_numbers">מספרים נבחרים</string>
    <string name="please_chose_dates_first">בבקשה בחר קודם תאריכים</string>
    <string name="chosen_number_frag_ET_end_raffle">עד הגרלה מספר</string>
    <string name="chosen_number_frag_ET_start_raffle">מהגרלה מספר</string>
    <string name="SearchByDates">חפש לפי תאריכים</string>
    <string name="SearchByRaffleNumber">חפש לפי מספרי הגרלה</string>
    <string name="chosen_numbers_appearance">מספר הופעות</string>
    <string name="times_numbers_appeared_togther">רצף המספרים האלו הופיעו יחד: %d פעמים</string>
    <string name="last_time_appeared_together">הרף הופיע ביחד בפעם האחרונה ב: %s</string>
    <string name="additional_statistics_info">מידע סטטיסי:</string>
    <string name="notification_title">טוען מידע על הגרלות</string>
    <string name="clear_screen_btn">נקה מסך</string>
    <string name="chosen_at_least_numbers">בחר לפחות שני מספרים לחיפוש</string>
    <string name="date_after_today">אין אפשרות לבחור תאריך עתידי עדיין</string>
</resources>
