<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/choose_numbers_fragment_layout"
        >
        <TableLayout
            android:id="@+id/gameTableId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TableRow
                android:id="@+id/choose_numbers_row"
                android:layout_weight="1"
                >


            </TableRow>
            <RadioGroup
                android:id="@+id/radio_chose_by_date_or_raffle_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"

                >
                <RadioButton android:id="@+id/radioRaffleNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SearchByRaffleNumber"
                    android:textSize="@dimen/chosen_numbers_fragment"
                    />

                <RadioButton android:id="@+id/radioDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SearchByDates"
                    android:checked="true"
                    android:textSize="@dimen/chosen_numbers_fragment"
                    />

            </RadioGroup>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/clear_screen_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_screen_btn"
                android:layout_weight="1"
                android:layout_gravity="top"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                android:background="@drawable/button_stats_selector"
                android:textColor="@color/buttons_stats_color_selector"

                />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="0.5"
                android:enabled="false"
                android:text="@string/chosen_number_frag_stat_btn"
                android:background="@drawable/button_stats_selector"
                android:textColor="@color/buttons_stats_color_selector"
                />

            <RelativeLayout
                android:id="@+id/search_by_date_edit_texts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3.3"

                >

                <EditText
                    android:id="@+id/time_until_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/chosen_number_frag_ET_end_date"
                    android:labelFor="@string/chosen_number_frag_ET_end_date"
                    android:textSize="@dimen/edit_txt_btns"
                    android:layout_toStartOf="@+id/time_from_edit_text"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    />

                <EditText
                    android:id="@+id/time_from_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edit_txt_btns"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/chosen_number_frag_ET_start_date"
                    android:labelFor="@string/chosen_number_frag_ET_start_date"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/search_by_raffle_number_edit_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/raffles_until_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/chosen_number_frag_ET_end_raffle"
                    android:labelFor="@string/chosen_number_frag_ET_end_raffle" />

                <EditText
                    android:id="@+id/raffles_from_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/chosen_number_frag_ET_start_raffle"
                    android:labelFor="@string/chosen_number_frag_ET_start_raffle" />

            </RelativeLayout>

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TableRow
                android:id="@+id/statistics_chosen_numbers_appearance_row"
                android:gravity="start"
                android:visibility="gone"
                android:layout_weight="1"


                >
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"
                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />

                <TextView
                    android:id="@+id/chosen_number_table_row_string"
                    android:text="@string/chosen_numbers"
                    android:gravity="end"
                    android:background="@color/statistics_chosen_numbers_appearance_row"
                    android:textSize="@dimen/chosen_numbers_appearance"
                    android:maxLines="1"

                    />
            </TableRow>
            <TableRow
                android:id="@+id/statistics_count_appearance_row"
                android:visibility="gone"
                android:gravity="start"
                android:layout_width="match_parent"

                >
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />
                <TextView
                    android:text=""
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/appearance_row"
                    android:background="@color/statistics_count_appearance_row"
                    android:textAlignment="center"
                    android:maxLines="1"

                    />


                <TextView
                    android:id="@+id/chosen_number_appearance_table_row_string"
                    android:text="@string/chosen_numbers_appearance"
                    android:gravity="start"
                    android:textSize="@dimen/chosen_numbers_appearance"
                    android:background="@color/statistics_count_appearance_row"
                    android:maxLines="1"
                    />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/additional_statistics_table_layout"
            >
            <TextView
            android:text="@string/additional_statistics_info"
            android:background="@color/additional_statistics_info"
            android:textSize="@dimen/chosen_numbers_fragment"
            android:visibility="gone"
            android:layout_weight="1"
            />


        </TableLayout>
    </LinearLayout>


</ScrollView>
